# uicx-ultimate

./: LICENSE  README.md  pyproject.toml  requirements.txt
.tmp_validation/: avb2_priv.pem  avb2_pub.pem  avb_priv.pem  avb_pub.pem  out.scatter  sample.pit  sample.scatter  super_raw.img  super_raw.img.simg  vendor.img
.tmp_validation/payload_out_real/: boot.img
.tmp_validation/plugins/: demo.py
.tmp_validation/rescue_mtk/: MTK_Android_scatter.txt  boot.img  sample.erofs.img
.tmp_validation/rescue_qcom/: gpt.img  patch0.xml  rawprogram0.xml  system.img
uicx/: main.py
uicx_ultimate_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
